--- a/covet/pkg/github.com/johnstarich/go/covet/internal/packages/index.html
+++ b/covet/pkg/github.com/johnstarich/go/covet/internal/packages/index.html
@@ -150,7 +150,7 @@ Package packages finds files related to a package pattern string.
 				
 				
 			</h2>
-			<pre>func FilePath(fs <a href="/go/covet/pkg/github.com/hack-pad/hackpadfs/">hackpadfs</a>.<a href="/go/covet/pkg/github.com/hack-pad/hackpadfs/#FS">FS</a>, workingDirectory, filePattern <a href="/go/covet/pkg/builtin/#string">string</a>, options <a href="#Options">Options</a>) (pkgFile <a href="/go/covet/pkg/builtin/#string">string</a>, err <a href="/go/covet/pkg/builtin/#error">error</a>)</pre>
+			<pre>func FilePath(fs <a href="https://pkg.go.dev/github.com/hack-pad/hackpadfs/">hackpadfs</a>.<a href="https://pkg.go.dev/github.com/hack-pad/hackpadfs/#FS">FS</a>, workingDirectory, filePattern <a href="https://pkg.go.dev/builtin/#string">string</a>, options <a href="#Options">Options</a>) (pkgFile <a href="https://pkg.go.dev/builtin/#string">string</a>, err <a href="https://pkg.go.dev/builtin/#error">error</a>)</pre>
 			<p>
 FilePath finds a package file&#39;s relative path inside the &#39;workingDirectory&#39; of &#39;fs&#39;.
 </p>
@@ -178,10 +178,10 @@ Options contains configurable options for calls to FilePath()
 			<pre>type Options struct {
 <span id="Options.GoRoot"></span>    <span class="comment">// GoRoot sets a custom GOROOT on the current build context.</span>
     <span class="comment">// Defaults to no root. Paths are relative to the &#39;fs&#39;.</span>
-    GoRoot <a href="/go/covet/pkg/builtin/#string">string</a>
+    GoRoot <a href="https://pkg.go.dev/builtin/#string">string</a>
 <span id="Options.GoPath"></span>    <span class="comment">// GoPath appends custom GOPATH elements on the current build context.</span>
     <span class="comment">// Defaults to including the current Go Module in a pseudo-GOPATH directory. Paths are relative to the &#39;fs&#39;.</span>
-    GoPath <a href="/go/covet/pkg/builtin/#string">string</a>
+    GoPath <a href="https://pkg.go.dev/builtin/#string">string</a>
 }
 </pre>
 
