--- a/dns/pkg/github.com/johnstarich/go/dns/testhelpers/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/testhelpers/index.html
@@ -150,7 +150,7 @@ Package testhelpers contains a test DNS server lifecycle manager.
 				
 				
 			</h2>
-			<pre>func StartDNSServer(t *<a href="/go/dns/pkg/testing/">testing</a>.<a href="/go/dns/pkg/testing/#T">T</a>, config <a href="#DNSConfig">DNSConfig</a>) <a href="/go/dns/pkg/builtin/#string">string</a></pre>
+			<pre>func StartDNSServer(t *<a href="https://pkg.go.dev/testing/">testing</a>.<a href="https://pkg.go.dev/testing/#T">T</a>, config <a href="#DNSConfig">DNSConfig</a>) <a href="https://pkg.go.dev/builtin/#string">string</a></pre>
 			<p>
 StartDNSServer starts a DNS server with the given configuration
 </p>
@@ -172,10 +172,10 @@ DNSConfig contains options to configure a test DNS server from StartDNSServer()
 </p>
 
 			<pre>type DNSConfig struct {
-<span id="DNSConfig.ResponseDelay"></span>    ResponseDelay <a href="/go/dns/pkg/time/">time</a>.<a href="/go/dns/pkg/time/#Duration">Duration</a>
-<span id="DNSConfig.Hostnames"></span>    Hostnames     map[<a href="/go/dns/pkg/builtin/#string">string</a>][]<a href="/go/dns/pkg/builtin/#string">string</a>
-<span id="DNSConfig.Port"></span>    Port          <a href="/go/dns/pkg/builtin/#int">int</a>
-<span id="DNSConfig.Network"></span>    Network       <a href="/go/dns/pkg/builtin/#string">string</a> <span class="comment">// e.g. udp4, udp6</span>
+<span id="DNSConfig.ResponseDelay"></span>    ResponseDelay <a href="https://pkg.go.dev/time/">time</a>.<a href="https://pkg.go.dev/time/#Duration">Duration</a>
+<span id="DNSConfig.Hostnames"></span>    Hostnames     map[<a href="https://pkg.go.dev/builtin/#string">string</a>][]<a href="https://pkg.go.dev/builtin/#string">string</a>
+<span id="DNSConfig.Port"></span>    Port          <a href="https://pkg.go.dev/builtin/#int">int</a>
+<span id="DNSConfig.Network"></span>    Network       <a href="https://pkg.go.dev/builtin/#string">string</a> <span class="comment">// e.g. udp4, udp6</span>
 }
 </pre>
 
