--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -151,7 +151,7 @@ Package generate generates documentation pages for a given package.
 				
 				
 			</h2>
-			<pre>func Docs(modulePath, modulePackage <a href="/go/gopages/pkg/builtin/#string">string</a>, src, fs billy.<a href="#Filesystem">Filesystem</a>, args <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/">flags</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/#Args">Args</a>, linker <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/">source</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/#Linker">Linker</a>) <a href="/go/gopages/pkg/builtin/#error">error</a></pre>
+			<pre>func Docs(modulePath, modulePackage <a href="https://pkg.go.dev/builtin/#string">string</a>, src, fs billy.<a href="#Filesystem">Filesystem</a>, args <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/">flags</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/#Args">Args</a>, linker <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/">source</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/#Linker">Linker</a>) <a href="https://pkg.go.dev/builtin/#error">error</a></pre>
 			<p>
 Docs generates documentation pages for the given package
 </p>
