--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/index.html
@@ -163,7 +163,7 @@ LinkOptions contains options for configuring hyperlinks to source files
 </p>
 
 			<pre>type LinkOptions struct {
-<span id="LinkOptions.Line"></span>    Line <a href="/go/gopages/pkg/builtin/#int">int</a>
+<span id="LinkOptions.Line"></span>    Line <a href="https://pkg.go.dev/builtin/#int">int</a>
 }
 </pre>
 
@@ -191,7 +191,7 @@ Linker can generate hyperlinks for any given package&#39;s file
 </p>
 
 			<pre>type Linker interface {
-    LinkToSource(packagePath <a href="/go/gopages/pkg/builtin/#string">string</a>, options <a href="#LinkOptions">LinkOptions</a>) <a href="/go/gopages/pkg/net/url/">url</a>.<a href="/go/gopages/pkg/net/url/#URL">URL</a>
+    LinkToSource(packagePath <a href="https://pkg.go.dev/builtin/#string">string</a>, options <a href="#LinkOptions">LinkOptions</a>) <a href="https://pkg.go.dev/net/url/">url</a>.<a href="https://pkg.go.dev/net/url/#URL">URL</a>
 }</pre>
 
 			
@@ -218,7 +218,7 @@ ScrapeChecker returns whether or not a given package&#39;s path should be scrape
 </p>
 
 			<pre>type ScrapeChecker interface {
-    ShouldScrapePackage(packagePath <a href="/go/gopages/pkg/builtin/#string">string</a>) <a href="/go/gopages/pkg/builtin/#bool">bool</a>
+    ShouldScrapePackage(packagePath <a href="https://pkg.go.dev/builtin/#string">string</a>) <a href="https://pkg.go.dev/builtin/#bool">bool</a>
 }</pre>
 
 			
