--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
@@ -145,7 +145,7 @@ Package module finds a module&#39;s package path for a given file path.
 				
 				
 			</h2>
-			<pre>func Package(modulePath <a href="/go/gopages/pkg/builtin/#string">string</a>) (<a href="/go/gopages/pkg/builtin/#string">string</a>, <a href="/go/gopages/pkg/builtin/#error">error</a>)</pre>
+			<pre>func Package(modulePath <a href="https://pkg.go.dev/builtin/#string">string</a>) (<a href="https://pkg.go.dev/builtin/#string">string</a>, <a href="https://pkg.go.dev/builtin/#error">error</a>)</pre>
 			<p>
 Package returns a module&#39;s package path for the given module file path
 </p>
