--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/safememfs/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/safememfs/index.html
@@ -194,7 +194,7 @@ New creates a new billy/memfs file system that can handle opening directories
 					
 					
 				</h3>
-				<pre>func (s *<a href="#SafeOpener">SafeOpener</a>) Open(name <a href="/go/gopages/pkg/builtin/#string">string</a>) (billy.<a href="#File">File</a>, <a href="/go/gopages/pkg/builtin/#error">error</a>)</pre>
+				<pre>func (s *<a href="#SafeOpener">SafeOpener</a>) Open(name <a href="https://pkg.go.dev/builtin/#string">string</a>) (billy.<a href="#File">File</a>, <a href="https://pkg.go.dev/builtin/#error">error</a>)</pre>
 				<p>
 Open reimplements memfs.FS.Open() to fix bad behavior on opening directories
 </p>
