--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template.go.html
@@ -103,7 +103,7 @@
 <span id="L46" class="ln">    46  </span>)
 <span id="L47" class="ln">    47  </span>
 <span id="L48" class="ln">    48  </span>func addGoPagesFuncs(funcs template.FuncMap, modulePackage string, args flags.Args) {
-<span id="L49" class="ln">    49  </span>	funcs[&#34;node_html&#34;] = nodeHTML(funcs[&#34;node_html&#34;].(nodeHTMLFunc), args.BaseURL)
+<span id="L49" class="ln">    49  </span>	funcs[&#34;node_html&#34;] = nodeHTML(funcs[&#34;node_html&#34;].(nodeHTMLFunc), args.BaseURL, modulePackage)
 <span id="L50" class="ln">    50  </span>
 <span id="L51" class="ln">    51  </span>	longTitle := fmt.Sprintf(&#34;%s | %s&#34;, args.SiteTitle, args.SiteDescription)
 <span id="L52" class="ln">    52  </span>	if args.SiteTitle == &#34;&#34; || args.SiteDescription == &#34;&#34; {
@@ -180,14 +180,16 @@
 <span id="L123" class="ln">   123  </span>type nodeHTMLFunc = func(info *godoc.PageInfo, node interface{}, linkify bool) string
 <span id="L124" class="ln">   124  </span>
 <span id="L125" class="ln">   125  </span><span class="comment">// nodeHTML runs the original &#39;node_html&#39; template func, then rewrites any links inside it</span>
-<span id="L126" class="ln">   126  </span>func nodeHTML(original nodeHTMLFunc, baseURL string) nodeHTMLFunc {
-<span id="L127" class="ln">   127  </span>	pkgURL := path.Join(baseURL, &#34;/pkg&#34;)
-<span id="L128" class="ln">   128  </span>	return func(info *godoc.PageInfo, node interface{}, linkify bool) string {
-<span id="L129" class="ln">   129  </span>		s := original(info, node, linkify)
-<span id="L130" class="ln">   130  </span>		return strings.ReplaceAll(s, `&lt;a href=&#34;/pkg/`, fmt.Sprintf(`&lt;a href=&#34;%s/`, pkgURL))
-<span id="L131" class="ln">   131  </span>	}
-<span id="L132" class="ln">   132  </span>}
-<span id="L133" class="ln">   133  </span>
+<span id="L126" class="ln">   126  </span>func nodeHTML(original nodeHTMLFunc, baseURL string, modulePackage string) nodeHTMLFunc {
+<span id="L127" class="ln">   127  </span>	pkgURL := fmt.Sprintf(`&lt;a href=&#34;%s/%s`, path.Join(baseURL, &#34;/pkg&#34;), modulePackage)
+<span id="L128" class="ln">   128  </span>	moduleURL := fmt.Sprintf(`&lt;a href=&#34;/pkg/%s`, modulePackage)
+<span id="L129" class="ln">   129  </span>	return func(info *godoc.PageInfo, node interface{}, linkify bool) string {
+<span id="L130" class="ln">   130  </span>		s := original(info, node, linkify)
+<span id="L131" class="ln">   131  </span>		internal := strings.ReplaceAll(s, moduleURL, pkgURL)
+<span id="L132" class="ln">   132  </span>		return strings.ReplaceAll(internal, `&lt;a href=&#34;/pkg/`, `&lt;a href=&#34;https://pkg.go.dev/`)
+<span id="L133" class="ln">   133  </span>	}
+<span id="L134" class="ln">   134  </span>}
+<span id="L135" class="ln">   135  </span>
 </pre><p></p>
 
 <div id="footer">
