--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -79,7 +79,7 @@
 	<td></td>
 	<td align="right">17950</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -88,7 +88,7 @@
 	<td></td>
 	<td align="right">3229</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -97,7 +97,7 @@
 	<td></td>
 	<td align="right">2981</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -106,7 +106,7 @@
 	<td></td>
 	<td align="right">218</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -115,7 +115,7 @@
 	<td></td>
 	<td align="right">176</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -124,7 +124,7 @@
 	<td></td>
 	<td align="right">4096</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -133,16 +133,25 @@
 	<td></td>
 	<td align="right">1606</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
 	
 	<td align="left"><a href="template.go">template.go</a></td>
 	<td></td>
-	<td align="right">4847</td>
+	<td align="right">5045</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="template_test.go">template_test.go</a></td>
+	<td></td>
+	<td align="right">1521</td>
+	<td></td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 <tr>
@@ -151,7 +160,7 @@
 	<td></td>
 	<td align="right">308</td>
 	<td></td>
-	<td align="left">2022-12-01 05:10:47.238958748 +0000 UTC</td>
+	<td align="left">2022-12-01 05:21:06.88259091 +0000 UTC</td>
 </tr>
 
 
