--- a/dns/pkg/github.com/johnstarich/go/dns/init/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/init/index.html
@@ -122,7 +122,7 @@ Package init provides a convenient side-effecting import to set the custom DNS r
 			<p>
 			<span style="font-size:90%">
 			
-				<a href="/go/dns/src/github.com/johnstarich/go/dns/init/init.go">init.go</a>
+				<a href="/go/dns/src/github.com/johnstarich/go/dns/init/init.go.html">init.go</a>
 			
 			</span>
 			</p>
