--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -127,11 +127,11 @@ Package generate generates documentation pages for a given package.
 			<p>
 			<span style="font-size:90%">
 			
-				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go">generate.go</a>
+				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go.html">generate.go</a>
 			
-				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/source.go">source.go</a>
+				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/source.go.html">source.go</a>
 			
-				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template.go">template.go</a>
+				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template.go.html">template.go</a>
 			
 			</span>
 			</p>
@@ -146,7 +146,7 @@ Package generate generates documentation pages for a given package.
 		
 			
 			
-			<h2 id="Docs">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go#L253">Docs</a>
+			<h2 id="Docs">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go.html#L252">Docs</a>
 				<a class="permalink" href="#Docs">&#xb6;</a>
 				
 				
