--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
@@ -125,7 +125,7 @@ Package module finds a module&#39;s package path for a given file path.
 			<p>
 			<span style="font-size:90%">
 			
-				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go">module.go</a>
+				<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html">module.go</a>
 			
 			</span>
 			</p>
@@ -140,7 +140,7 @@ Package module finds a module&#39;s package path for a given file path.
 		
 			
 			
-			<h2 id="Package">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go#L32">Package</a>
+			<h2 id="Package">func <a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/module/module.go.html#L32">Package</a>
 				<a class="permalink" href="#Package">&#xb6;</a>
 				
 				
