--- a/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
@@ -86,15 +86,20 @@
 <span id="L29" class="ln">    29  </span><span class="comment">//	-include-head value</span>
 <span id="L30" class="ln">    30  </span><span class="comment">//	  	Includes the given HTML file&#39;s contents in every page&#39;s &#39;&lt;head&gt;&lt;/head&gt;&#39;. Useful</span>
 <span id="L31" class="ln">    31  </span><span class="comment">//	  	for including custom analytics scripts. Must be valid HTML.</span>
-<span id="L32" class="ln">    32  </span><span class="comment">//	-out string</span>
-<span id="L33" class="ln">    33  </span><span class="comment">//	  	Output path for static files (default &#34;dist&#34;)</span>
-<span id="L34" class="ln">    34  </span><span class="comment">//	-source-link string</span>
-<span id="L35" class="ln">    35  </span><span class="comment">//	  	Custom source code link template. Disables built-in source code pages. For</span>
-<span id="L36" class="ln">    36  </span><span class="comment">//	  	example, &#34;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34;</span>
-<span id="L37" class="ln">    37  </span><span class="comment">//	  	generates links compatible with GitHub and GitLab. Must be a valid Go template</span>
-<span id="L38" class="ln">    38  </span><span class="comment">//	  	and must generate valid URLs.</span>
-<span id="L39" class="ln">    39  </span>package main
-<span id="L40" class="ln">    40  </span>
+<span id="L32" class="ln">    32  </span><span class="comment">//	-internal</span>
+<span id="L33" class="ln">    33  </span><span class="comment">//	  	Includes &#39;internal&#39; packages in the package index and unexported functions.</span>
+<span id="L34" class="ln">    34  </span><span class="comment">//	  	Useful for sharing documentation within the same development team. Note: This</span>
+<span id="L35" class="ln">    35  </span><span class="comment">//	  	only affects page generation for non-internal packages, like package lists.</span>
+<span id="L36" class="ln">    36  </span><span class="comment">//	  	Internal package docs are always generated.</span>
+<span id="L37" class="ln">    37  </span><span class="comment">//	-out string</span>
+<span id="L38" class="ln">    38  </span><span class="comment">//	  	Output path for static files (default &#34;dist&#34;)</span>
+<span id="L39" class="ln">    39  </span><span class="comment">//	-source-link string</span>
+<span id="L40" class="ln">    40  </span><span class="comment">//	  	Custom source code link template. Disables built-in source code pages. For</span>
+<span id="L41" class="ln">    41  </span><span class="comment">//	  	example, &#34;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34;</span>
+<span id="L42" class="ln">    42  </span><span class="comment">//	  	generates links compatible with GitHub and GitLab. Must be a valid Go template</span>
+<span id="L43" class="ln">    43  </span><span class="comment">//	  	and must generate valid URLs.</span>
+<span id="L44" class="ln">    44  </span>package main
+<span id="L45" class="ln">    45  </span>
 </pre><p></p>
 
 <div id="footer">
