--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags.go.html
@@ -67,46 +67,48 @@
 <span id="L10" class="ln">    10  </span>
 <span id="L11" class="ln">    11  </span><span class="comment">// Args contains all command-line options for gopages</span>
 <span id="L12" class="ln">    12  </span>type Args struct {
-<span id="L13" class="ln">    13  </span>	BaseURL            string
-<span id="L14" class="ln">    14  </span>	GitHubPages        bool
-<span id="L15" class="ln">    15  </span>	GitHubPagesToken   string
-<span id="L16" class="ln">    16  </span>	GitHubPagesUser    string
-<span id="L17" class="ln">    17  </span>	IncludeInHead      FilePathContents
-<span id="L18" class="ln">    18  </span>	SourceLinkTemplate string
-<span id="L19" class="ln">    19  </span>	OutputPath         string
-<span id="L20" class="ln">    20  </span>	SiteDescription    string
-<span id="L21" class="ln">    21  </span>	SiteTitle          string
-<span id="L22" class="ln">    22  </span>	Watch              bool <span class="comment">// not added as a flag, only enabled when running from ./cmd/watch</span>
-<span id="L23" class="ln">    23  </span>}
-<span id="L24" class="ln">    24  </span>
-<span id="L25" class="ln">    25  </span><span class="comment">// Parse parses the given command line arguments into Args values and returns any output to send to the user</span>
-<span id="L26" class="ln">    26  </span>func Parse(osArgs ...string) (Args, string, error) {
-<span id="L27" class="ln">    27  </span>	var args Args
-<span id="L28" class="ln">    28  </span>	commandLine := flag.NewFlagSet(&#34;gopages&#34;, flag.ContinueOnError)
-<span id="L29" class="ln">    29  </span>	commandLine.StringVar(&amp;args.OutputPath, &#34;out&#34;, &#34;dist&#34;, &#34;Output path for static files&#34;)
-<span id="L30" class="ln">    30  </span>	commandLine.StringVar(&amp;args.BaseURL, &#34;base&#34;, &#34;&#34;, &#34;Base URL to use for static assets&#34;)
-<span id="L31" class="ln">    31  </span>	commandLine.StringVar(&amp;args.SiteTitle, &#34;brand-title&#34;, &#34;&#34;, &#34;Branding title in the top left of documentation&#34;)
-<span id="L32" class="ln">    32  </span>	commandLine.StringVar(&amp;args.SiteDescription, &#34;brand-description&#34;, &#34;&#34;, &#34;Branding description in the top left of documentation&#34;)
-<span id="L33" class="ln">    33  </span>	commandLine.StringVar(&amp;args.SourceLinkTemplate, &#34;source-link&#34;, &#34;&#34;, `Custom source code link template. Disables built-in source code pages. For example, &#34;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34; generates links compatible with GitHub and GitLab. Must be a valid Go template and must generate valid URLs.`)
-<span id="L34" class="ln">    34  </span>	commandLine.Var(&amp;args.IncludeInHead, &#34;include-head&#34;, &#34;Includes the given HTML file&#39;s contents in every page&#39;s &#39;&lt;head&gt;&lt;/head&gt;&#39;. Useful for including custom analytics scripts. Must be valid HTML.&#34;)
-<span id="L35" class="ln">    35  </span>
-<span id="L36" class="ln">    36  </span>	commandLine.BoolVar(&amp;args.GitHubPages, &#34;gh-pages&#34;, false, &#34;Automatically commit the output path to the gh-pages branch. The current branch must be clean.&#34;)
-<span id="L37" class="ln">    37  </span>	commandLine.StringVar(&amp;args.GitHubPagesUser, &#34;gh-pages-user&#34;, &#34;&#34;, &#34;The Git username to push with&#34;)
-<span id="L38" class="ln">    38  </span>	commandLine.StringVar(&amp;args.GitHubPagesToken, &#34;gh-pages-token&#34;, &#34;&#34;, &#34;The Git token to push with. Usually this is an API key.&#34;)
-<span id="L39" class="ln">    39  </span>	var output bytes.Buffer
-<span id="L40" class="ln">    40  </span>	commandLine.SetOutput(&amp;output)
-<span id="L41" class="ln">    41  </span>	err := commandLine.Parse(osArgs) <span class="comment">// prints usage if fails</span>
-<span id="L42" class="ln">    42  </span>	return args, output.String(), err
-<span id="L43" class="ln">    43  </span>}
-<span id="L44" class="ln">    44  </span>
-<span id="L45" class="ln">    45  </span><span class="comment">// Linker returns an appropriate source.Linker for the given command line args</span>
-<span id="L46" class="ln">    46  </span>func (a Args) Linker(modulePackage string) (source.Linker, error) { <span class="comment">//nolint:ireturn // This method&#39;s purpose is to determine the correct implementation of source.Linker to return</span>
-<span id="L47" class="ln">    47  </span>	if a.SourceLinkTemplate != &#34;&#34; {
-<span id="L48" class="ln">    48  </span>		return newTemplateLinker(modulePackage, a.SourceLinkTemplate)
-<span id="L49" class="ln">    49  </span>	}
-<span id="L50" class="ln">    50  </span>	return newGoPagesLinker(a.BaseURL), nil
-<span id="L51" class="ln">    51  </span>}
-<span id="L52" class="ln">    52  </span>
+<span id="L13" class="ln">    13  </span>	BaseURL               string
+<span id="L14" class="ln">    14  </span>	GitHubPages           bool
+<span id="L15" class="ln">    15  </span>	GitHubPagesToken      string
+<span id="L16" class="ln">    16  </span>	GitHubPagesUser       string
+<span id="L17" class="ln">    17  </span>	IncludeInHead         FilePathContents
+<span id="L18" class="ln">    18  </span>	IndexInternalPackages bool
+<span id="L19" class="ln">    19  </span>	SourceLinkTemplate    string
+<span id="L20" class="ln">    20  </span>	OutputPath            string
+<span id="L21" class="ln">    21  </span>	SiteDescription       string
+<span id="L22" class="ln">    22  </span>	SiteTitle             string
+<span id="L23" class="ln">    23  </span>	Watch                 bool <span class="comment">// not added as a flag, only enabled when running from ./cmd/watch</span>
+<span id="L24" class="ln">    24  </span>}
+<span id="L25" class="ln">    25  </span>
+<span id="L26" class="ln">    26  </span><span class="comment">// Parse parses the given command line arguments into Args values and returns any output to send to the user</span>
+<span id="L27" class="ln">    27  </span>func Parse(osArgs ...string) (Args, string, error) {
+<span id="L28" class="ln">    28  </span>	var args Args
+<span id="L29" class="ln">    29  </span>	commandLine := flag.NewFlagSet(&#34;gopages&#34;, flag.ContinueOnError)
+<span id="L30" class="ln">    30  </span>	commandLine.StringVar(&amp;args.OutputPath, &#34;out&#34;, &#34;dist&#34;, &#34;Output path for static files&#34;)
+<span id="L31" class="ln">    31  </span>	commandLine.StringVar(&amp;args.BaseURL, &#34;base&#34;, &#34;&#34;, &#34;Base URL to use for static assets&#34;)
+<span id="L32" class="ln">    32  </span>	commandLine.StringVar(&amp;args.SiteTitle, &#34;brand-title&#34;, &#34;&#34;, &#34;Branding title in the top left of documentation&#34;)
+<span id="L33" class="ln">    33  </span>	commandLine.StringVar(&amp;args.SiteDescription, &#34;brand-description&#34;, &#34;&#34;, &#34;Branding description in the top left of documentation&#34;)
+<span id="L34" class="ln">    34  </span>	commandLine.StringVar(&amp;args.SourceLinkTemplate, &#34;source-link&#34;, &#34;&#34;, `Custom source code link template. Disables built-in source code pages. For example, &#34;https://github.com/johnstarich/go/blob/master/gopages/{{.Path}}{{if .Line}}#L{{.Line}}{{end}}&#34; generates links compatible with GitHub and GitLab. Must be a valid Go template and must generate valid URLs.`)
+<span id="L35" class="ln">    35  </span>	commandLine.Var(&amp;args.IncludeInHead, &#34;include-head&#34;, &#34;Includes the given HTML file&#39;s contents in every page&#39;s &#39;&lt;head&gt;&lt;/head&gt;&#39;. Useful for including custom analytics scripts. Must be valid HTML.&#34;)
+<span id="L36" class="ln">    36  </span>	commandLine.BoolVar(&amp;args.IndexInternalPackages, &#34;internal&#34;, false, &#34;Includes &#39;internal&#39; packages in the package index and unexported functions. Useful for sharing documentation within the same development team. Note: This only affects page generation for non-internal packages, like package lists. Internal package docs are always generated.&#34;)
+<span id="L37" class="ln">    37  </span>
+<span id="L38" class="ln">    38  </span>	commandLine.BoolVar(&amp;args.GitHubPages, &#34;gh-pages&#34;, false, &#34;Automatically commit the output path to the gh-pages branch. The current branch must be clean.&#34;)
+<span id="L39" class="ln">    39  </span>	commandLine.StringVar(&amp;args.GitHubPagesUser, &#34;gh-pages-user&#34;, &#34;&#34;, &#34;The Git username to push with&#34;)
+<span id="L40" class="ln">    40  </span>	commandLine.StringVar(&amp;args.GitHubPagesToken, &#34;gh-pages-token&#34;, &#34;&#34;, &#34;The Git token to push with. Usually this is an API key.&#34;)
+<span id="L41" class="ln">    41  </span>	var output bytes.Buffer
+<span id="L42" class="ln">    42  </span>	commandLine.SetOutput(&amp;output)
+<span id="L43" class="ln">    43  </span>	err := commandLine.Parse(osArgs) <span class="comment">// prints usage if fails</span>
+<span id="L44" class="ln">    44  </span>	return args, output.String(), err
+<span id="L45" class="ln">    45  </span>}
+<span id="L46" class="ln">    46  </span>
+<span id="L47" class="ln">    47  </span><span class="comment">// Linker returns an appropriate source.Linker for the given command line args</span>
+<span id="L48" class="ln">    48  </span>func (a Args) Linker(modulePackage string) (source.Linker, error) { <span class="comment">//nolint:ireturn // This method&#39;s purpose is to determine the correct implementation of source.Linker to return</span>
+<span id="L49" class="ln">    49  </span>	if a.SourceLinkTemplate != &#34;&#34; {
+<span id="L50" class="ln">    50  </span>		return newTemplateLinker(modulePackage, a.SourceLinkTemplate)
+<span id="L51" class="ln">    51  </span>	}
+<span id="L52" class="ln">    52  </span>	return newGoPagesLinker(a.BaseURL), nil
+<span id="L53" class="ln">    53  </span>}
+<span id="L54" class="ln">    54  </span>
 </pre><p></p>
 
 <div id="footer">
