--- a/covet/pkg/github.com/johnstarich/go/covet/cmd/covet/index.html
+++ b/covet/pkg/github.com/johnstarich/go/covet/cmd/covet/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/covet/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -71,9 +71,7 @@
 
 	
 		
-		<p>
-Command covet reads version control diffs and Go coverage files to generate reports on their intersection.
-</p>
+		<p>Command covet reads version control diffs and Go coverage files to generate reports on their intersection.
 
 	
 
@@ -86,7 +84,7 @@ Command covet reads version control diffs and Go coverage files to generate repo
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
