--- a/dns/pkg/github.com/johnstarich/go/dns/init/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/init/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/dns/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -89,9 +89,7 @@
 			</div>
 			<div class="expanded">
 				<h2 class="toggleButton" title="Click to hide Overview section">Overview ▾</h2>
-				<p>
-Package init provides a convenient side-effecting import to set the custom DNS resolver.
-</p>
+				<p>Package init provides a convenient side-effecting import to set the custom DNS resolver.
 
 				
 			</div>
@@ -147,7 +145,7 @@ Package init provides a convenient side-effecting import to set the custom DNS r
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
