--- a/goop/pkg/github.com/johnstarich/go/goop/cmd/goop/index.html
+++ b/goop/pkg/github.com/johnstarich/go/goop/cmd/goop/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/goop/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -71,9 +71,7 @@
 
 	
 		
-		<p>
-Command goop installs and manages both local and remote Go modules.
-</p>
+		<p>Command goop installs and manages both local and remote Go modules.
 
 	
 
@@ -86,7 +84,7 @@ Command goop installs and manages both local and remote Go modules.
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
